--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.97.4",
+    "@react-three/fiber": "^8.15.16",
+    "@studio-freight/lenis": "^1.0.34",
+    "@studio-freight/react-lenis": "^0.0.43",
+    "@types/three": "^0.161.2",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.17",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
